--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.sonarqube' version '4.4.1.3373'
 }
 
 group = 'com.masterproject'
@@ -45,4 +46,13 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "bbmt0_Musigame"
+        property "sonar.organization", "musigame"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property 'sonar.coverage.jacoco.xmlReportPaths', layout.buildDirectory.file("jacoco.xml").get().asFile.path
+    }
 }
