feat(firebase) impl FirebaseService

--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.2'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.2'
+    id 'io.spring.dependency-management' version '1.1.4'
     id 'org.sonarqube' version '4.4.1.3373'
 }
 
@@ -9,43 +9,45 @@ group = 'com.masterproject'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+    sourceCompatibility = '21'
 }
 
 sourceSets {
-	acceptance {
-		java {
-			srcDir file('src/acceptance/java')
-		}
-	}
+    acceptance {
+        java {
+            srcDir file('src/acceptance/java')
+        }
+    }
 }
 
 configurations {
-	acceptanceTestCompile.extendsFrom testCompile
-	acceptanceTestRuntime.extendsFrom testRuntime
+    acceptanceTestCompile.extendsFrom testCompile
+    acceptanceTestRuntime.extendsFrom testRuntime
 }
 
 task acceptance(type: Test) {
-	filter {
-		includeTestsMatching "com.masterproject.musigame.acceptance.MusigameAcceptanceTest"
-	}
-	outputs.upToDateWhen { false }
-	testClassesDirs = sourceSets.acceptance.output.classesDirs
-	classpath = sourceSets.acceptance.runtimeClasspath
-	systemProperty "project.root", "${projectDir}"
+    filter {
+        includeTestsMatching "com.masterproject.musigame.acceptance.MusigameAcceptanceTest"
+    }
+    outputs.upToDateWhen { false }
+    testClassesDirs = sourceSets.acceptance.output.classesDirs
+    classpath = sourceSets.acceptance.runtimeClasspath
+    systemProperty "project.root", "${projectDir}"
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 sonar {
