--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.sonarqube' version '4.4.1.3373'
+    id 'io.freefair.lombok' version '8.6'
 }
 
 group = 'com.masterproject'
@@ -39,9 +40,17 @@ repositories {
     mavenCentral()
 }
 
+ext{
+    firebaseVersion = '9.2.0'
+    lombokVersion = '1.18.30'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.google.firebase:firebase-admin:9.2.0'
+    implementation "com.google.firebase:firebase-admin:${firebaseVersion}"
+
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
