--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.sonarqube' version '4.4.1.3373'
@@ -48,6 +49,7 @@ ext{
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "com.google.firebase:firebase-admin:${firebaseVersion}"
+    implementation "org.springframework.boot:spring-boot-gradle-plugin:3.2.2"
 
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
