--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -44,12 +44,13 @@ repositories {
 ext{
     firebaseVersion = '9.2.0'
     lombokVersion = '1.18.30'
+    gradlePluginVersion = '3.2.2'
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "com.google.firebase:firebase-admin:${firebaseVersion}"
-    implementation "org.springframework.boot:spring-boot-gradle-plugin:3.2.2"
+    implementation "org.springframework.boot:spring-boot-gradle-plugin:${gradlePluginVersion}"
 
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
