--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: 11  # Change to the appropriate Java version
+          java-version: 21
           distribution: 'zulu' 
 
       - name: Cache SonarCloud packages
@@ -59,10 +59,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: 11  # Change to the appropriate Java version
+          java-version: 21  # Change to the appropriate Java version
           distribution: 'zulu'
 
       - name: Analyze with SonarCloud
