--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -63,6 +63,18 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+
+jacocoTestReport {
+    getExecutionData().setFrom(fileTree(layout.buildDirectory.asFile.get()).include("/jacoco/*.exec"))
+    reports {
+        xml.required = true
+        xml.outputLocation = layout.buildDirectory.file("jacoco.xml")
+
+        html.required = true
+        html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
+    }
+}
+
 sonar {
     properties {
         property "sonar.projectKey", "bbmt0_Musigame"
