--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,53 +1,37 @@
 name: SonarCloud
-
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: bff
-
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  
-
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: 21
-          distribution: 'zulu' 
-
+          distribution: 'zulu' # Alternative distribution options are available
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-
-      - name : Copy Firebase Config
-        run : |
-          mkdir -p src/main/resources/configuration
-          echo '${{ secrets.FIREBASE_CONFIG }}' > src/main/resources/configuration/firebase_key.json
-              
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonar --info
