--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.sonarqube' version '4.4.1.3373'
+    id "org.sonarqube" version "4.4.1.3373"
     id 'io.freefair.lombok' version '8.6'
 }
 
@@ -80,6 +80,5 @@ sonar {
         property "sonar.projectKey", "bbmt0_Musigame"
         property "sonar.organization", "musigame"
         property "sonar.host.url", "https://sonarcloud.io"
-        property 'sonar.coverage.jacoco.xmlReportPaths', layout.buildDirectory.file("jacoco.xml").get().asFile.path
     }
 }
