--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -80,5 +80,6 @@ sonar {
         property "sonar.projectKey", "bbmt0_Musigame"
         property "sonar.organization", "musigame"
         property "sonar.host.url", "https://sonarcloud.io"
+        property 'sonar.coverage.jacoco.xmlReportPaths', layout.buildDirectory.file("jacoco.xml").get().asFile.path
     }
 }
