--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,9 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 21
-          distribution: 'zulu' # Alternative distribution options are available
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+          distribution: 'zulu'
       - name: Cache Gradle packages
-        uses: actions/cache@v3
+        uses: actions/cache@v2
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
@@ -39,8 +33,8 @@ jobs:
         run: |
           mkdir -p src/main/resources/configuration
           echo '${{ secrets.FIREBASE_CONFIG }}' > src/main/resources/configuration/firebase_key.json            
-      - name: Build and analyze
+      - name: Build and test
+        run: ./gradlew clean test sonarqube
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info
