--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -50,6 +50,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation "org.springframework:spring-webflux"
     implementation "com.google.firebase:firebase-admin:${firebaseVersion}"
     implementation "org.apache.commons:commons-lang3:${apacheCommonsVersion}"
 
