fix(ci) fix build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,11 @@ jobs:
       - name: Copy Firebase Config
         run: |
           mkdir -p src/main/resources/configuration
-          echo '${{ secrets.FIREBASE_CONFIG }}' > src/main/resources/configuration/firebase_key.json 
-          mkdir -p test/main/resources/configuration
-          echo '${{ secrets.FIREBASE_CONFIG }}' > src/main/resources/configuration/firebase_key.json       
+          echo '${{ secrets.FIREBASE_CONFIG }}' > src/main/resources/configuration/firebase_key.json
+      - name: Copy Firebase Config Test
+        run: |
+          mkdir -p src/test/resources/configuration
+          echo '${{ secrets.FIREBASE_CONFIG }}' > src/test/resources/configuration/firebase_key.json         
       - name: Build and test
         run: ./gradlew clean build jacocoTestReport sonar
         env:
