--- a/bff/build.gradle
+++ b/bff/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id "org.sonarqube" version "4.4.1.3373"
     id 'io.freefair.lombok' version '8.6'
+    id 'application'
 }
 
 group = 'com.masterproject'
@@ -46,6 +47,12 @@ ext {
     apacheCommonsVersion = '3.14.0'
     lombokVersion = '1.18.30'
     jqwikVersion = '1.8.4'
+    javaMainClass = "com.masterproject.musigame.Application"
+}
+apply plugin : "java"
+
+application {
+    mainClassName = javaMainClass
 }
 
 dependencies {
