--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,20 +43,60 @@ jobs:
           mkdir -p src/test/resources/configuration
           echo '${{ secrets.FIREBASE_CONFIG_TEST }}' > src/test/resources/configuration/firebase_key.json
 
+      - name: Ensure build directory exists
+        run: mkdir -p build/libs
+
       - name: Build and Test Backend
         run: ./gradlew clean build jacocoTestReport
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+      - name: List build artifacts after build
+        run: ls -al build/libs/
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: bff-jar
+          path: build/libs/*.jar
+
+      - name: Upload build artifacts for debugging
+        uses: actions/upload-artifact@v2
+        with:
+          name: debug-build-libs
+          path: build/libs/
+
       - name: Analyze Backend on SonarCloud
         run: ./gradlew sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+  deploy-backend:
+    name: Deploy Backend
+    runs-on: ubuntu-latest
+    needs: build-backend
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: List files before download
+        run: ls -al
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: bff-jar
+          path: build/libs/
+
+      - name: List files after download
+        run: ls -al build/libs/
+
       - name: Deploy Backend to Azure
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'musigame-bff' 
+          app-name: 'musigame-bff'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BFF }}
-          package: 'build/libs/*.jar' 
+          package: 'build/libs/*.jar'
