--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: bff-jar
-          path: build/libs/musigame-0.0.1-SNAPSHOT.jar
+          path: bff/build/libs/musigame-0.0.1-SNAPSHOT.jar
 
       - name: Upload build artifacts for debugging
         uses: actions/upload-artifact@v2
