--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: debug-build-libs
-          path: build/libs/
+          path: bff/build/libs/
 
       - name: Analyze Backend on SonarCloud
         run: ./gradlew sonar
