--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,3 +100,61 @@ jobs:
           app-name: 'musigame-bff'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BFF }}
           package: 'build/libs/*.jar'
+
+  build-front:
+    name: Build and Deploy Front
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'  
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Front
+        run: npm run build 
+
+      - name: List build artifacts
+        run: ls -al build/  
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: front-build
+          path: front/build/
+
+  deploy-front:
+    name: Deploy front
+    runs-on: ubuntu-latest
+    needs: build-front
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: front-build
+          path: ./build/
+
+      - name: List files after download
+        run: ls -al build/
+
+      - name: Deploy front to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'musigame-front'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONT }}
+          package: './build/'
