--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,44 +116,38 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'  
+          node-version: '20'  
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Install & build
+        run: |
+          npm install
+          npm run build --if-present
 
-      - name: Build Front
-        run: npm run build 
-
-      - name: List build artifacts
-        run: ls -al build/  
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
           name: front-build
-          path: front/build/
+          path: release.zip
 
   deploy-front:
     name: Deploy front
     runs-on: ubuntu-latest
     needs: build-front
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
       - name: Download build artifact
         uses: actions/download-artifact@v3
         with:
           name: front-build
 
-      - name: List files after download
-        run: ls -al build/
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
       - name: Deploy front to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'musigame-front'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONT }}
-          package: './build/'
+          package: '.'
