--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
           package: 'build/libs/*.jar'
 
   build-front:
-    name: Build and front
+    name: Build front
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -141,7 +141,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: front-build
-          path: ./front-build
+          path: build
 
       - name: Unzip artifact for deployment
         run: unzip ./front-build/*.zip -d ./front-build
