--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,8 +138,8 @@ jobs:
     needs: build-front
     steps:
       
-      - name: pwd
-        run: pwd
+      - name: list files in directory
+        run: ls -al
 
       - name: Download build artifact
         uses: actions/download-artifact@v2
@@ -147,12 +147,9 @@ jobs:
           name: front-build
           path: front/build
 
-      - name: Unzip artifact for deployment
-        run: unzip ./front-build/*.zip -d ./front-build
-
       - name: Deploy front to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'musigame-front'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONT }}
-          package: ./front-build/build
+          package: .
