--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,4 +152,4 @@ jobs:
         with:
           app-name: 'musigame-front'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONT }}
-          package: .
+          package: ./build
