--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,13 @@ jobs:
           app-name: 'musigame-bff'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BFF }}
           package: 'build/libs/*.jar'
-
+      
+      - name: Set start up command to launch jar file
+        run : |
+            az webapp config set --resource-group musigame --name musigame-bff --startup-file "java -jar musigame-0.0.1-SNAPSHOT.jar"
+        env:
+            AZURE_WEBAPP_PUBLISH_PROFILE_BFF: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BFF }}
+        
   build-front:
     name: Build and Deploy Front
     runs-on: ubuntu-latest
