--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -76,6 +77,7 @@ jobs:
     name: Deploy bff
     runs-on: ubuntu-latest
     needs: build-bff
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -142,6 +144,7 @@ jobs:
     name: Deploy front
     runs-on: ubuntu-latest
     needs: build-front
+    if: github.ref == 'refs/heads/main'
     steps:
       
       - name: list files in directory
