--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
-name: CI/CD Pipeline
+name: Build and Analyze
 
 on:
   push:
     branches:
       - main
-      - dev
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -19,7 +18,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  
+          fetch-depth: 0
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -73,42 +72,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  deploy-bff:
-    name: Deploy bff
-    runs-on: ubuntu-latest
-    needs: build-bff
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: bff-jar
-          path: build/libs/
-
-      - name: List files after download
-        run: ls -al build/libs/
-
-      - name: Log in to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy to prod with artifact
-        uses: azure/spring-cloud-deploy@v1
-        with:
-          azure-subscription : ${{ secrets.AZURE_SUBSCRIPTION }}
-          action: Deploy
-          app-name: musigame-bff-spring
-          service-name: musigame-bff-spring-apps
-          use-staging-deployment: false
-          package: build/libs/musigame-0.0.1-SNAPSHOT.jar
-          
   build-front:
     name: Build front
     runs-on: ubuntu-latest
@@ -124,7 +87,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  
+          node-version: '20'
 
       - name: Install & build
         run: |
@@ -139,27 +102,3 @@ jobs:
         with:
           name: front-build
           path: front/build
-
-  deploy-front:
-    name: Deploy front
-    runs-on: ubuntu-latest
-    needs: build-front
-    if: github.ref == 'refs/heads/main'
-    steps:
-      
-      - name: list files in directory
-        run: ls -al
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: front-build
-          path: front/build
-
-
-      - name: Deploy front to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'musigame-front'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONT }}
-          package: front/build
